# meson

./: LOCK_FILE_EXAMPLE.md  LOCK_FILE_IMPLEMENTATION.md  run_project_tests.py
docs/markdown/: Wrap-dependency-system-manual.md
manual tests/14 lock/subprojects/: .gitignore
mesonbuild/: msubprojects.py
mesonbuild/compilers/: compilers.py  detect.py  julia.py
mesonbuild/modules/: julia.py
mesonbuild/wrap/: lockfile.py  wrap.py
test cases/julia/: README.md
test cases/julia/1 static_kalman_demo/: juliac-wrapper  kalman.jl  main.c  meson.build  native.ini
test cases/julia/static_kalman_demo/: kalman.jl  main.c  meson.build
test cases/unit/116 empty project/: expected_mods.json
unittests/: subprojectscommandtests.py
